--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
+minecraft_version=1.20.1
+jei_version=15.2.0.27
