Working Purgen Brewery! (But lots to be fixed)
Also i should fit PARTENSIZE somewhere, add global random and fix A BUNCH OF BUGS

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.server.MinecraftServer f_129744_ # storageSource
+public net.minecraft.world.item.crafting.RecipeManager$byType
