fixed modid in GRADLE

--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ plugins {
     id 'org.spongepowered.mixin' version '0.7.+'
 }
 
-version = '1.0'
-group = 'com.yourname.modid'
-archivesBaseName = 'modid'
+version = 'Beta-0.1x'
+group = 'net.svisvi.jigsawpp'
+archivesBaseName = 'jigsawPP'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
