--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.server.MinecraftServer f_129744_ # storageSource
 public net.minecraft.world.item.crafting.RecipeManager$byType
+public-f net.minecraft.world.entity.Mob m_6096_(Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/InteractionHand;)Lnet/minecraft/world/InteractionResult; #interact
+public net.minecraft.world.entity.Mob m_21499_(Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/InteractionHand;)Lnet/minecraft/world/InteractionResult; #interact sock
