--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ gradle-app.setting
 .idea/modules.xml
 .idea/modules/Jigsaw_pp_20.test.iml
 .idea/modules/net.svisvi.jigsawpp.Jigsaw_pp_20.main.iml
+.idea/misc.xml
