--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -9,5 +9,7 @@ public net.minecraft.world.level.block.BeehiveBlock m_49649_(Lnet/minecraft/worl
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity m_155161_(Lnet/minecraft/nbt/CompoundTag;)V
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity m_58736_(ILnet/minecraft/world/entity/animal/Bee;)V
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity m_58759_(Lnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/entity/BeehiveBlockEntity$BeeReleaseStatus;)Ljava/util/List;
+public net.minecraft.world.entity.LivingEntity m_262803_()Lnet/minecraft/world/phys/Vec3;
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58732_
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58733_
+
