--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ gradle-app.setting
 .idea/modules/Jigsaw_pp_20.test.iml
 .idea/modules/net.svisvi.jigsawpp.Jigsaw_pp_20.main.iml
 .idea/misc.xml
+.idea/misc.xml
