--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,4 +12,9 @@ public net.minecraft.world.level.block.entity.BeehiveBlockEntity m_58759_(Lnet/m
 public net.minecraft.world.entity.LivingEntity m_262803_()Lnet/minecraft/world/phys/Vec3;
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58732_
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58733_
+public net.minecraft.world.level.block.entity.BeaconBlockEntity$BeaconBeamSection f_58715_
+public net.minecraft.world.level.block.entity.BeaconBlockEntity$BeaconBeamSection m_58719_()V
+public net.minecraft.client.renderer.blockentity.BeaconRenderer m_112176_(Lcom/mojang/blaze3d/vertex/PoseStack;Lnet/minecraft/client/renderer/MultiBufferSource;FJII[F)V
+public net.minecraft.client.Minecraft f_91013_
+
 
