--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,4 +12,5 @@ public net.minecraft.world.level.block.entity.BeehiveBlockEntity m_58759_(Lnet/m
 public net.minecraft.world.entity.LivingEntity m_262803_()Lnet/minecraft/world/phys/Vec3;
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58732_
 public net.minecraft.world.level.block.entity.BeehiveBlockEntity f_58733_
+public-f net.minecraft.client.renderer.LevelRenderer f_109458_
 
