--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
-org.gradle.jvmargs=-Xmx6G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 minecraft_version=1.20.1
 jei_version=15.2.0.27
+
+systemProp.minecraft.assets.skipDownload=true
+systemProp.http.maxRedirects=5
+systemProp.http.keepAlive=true
