--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,11 @@ org.gradle.daemon=false
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 minecraft_version=1.20.1
-jei_version=15.2.0.27
+jei_version=15.19.0.91
+create_version = 6.0.6-150
+ponder_version = 1.0.80
+flywheel_version = 1.0.4
+registrate_version = MC1.20-1.3.3
 
 systemProp.minecraft.assets.skipDownload=true
 systemProp.http.maxRedirects=5
